--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "live-server": "^1.2.0",
+    "validator": "^9.2.0",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
