--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.28.7",
     "live-server": "^1.2.0",
     "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
